[package]
name = "oblivious-transfer"
version = "0.1.0"
authors = ["Lennart Vogelsang <dev@vogelsangs.net>"]

[lib]
name = "ot"
path = "src/lib.rs"

[[bin]]
name = "ot_test_bin"
path = "src/bin.rs"

[dependencies]
#TODO: nightly for faster field elements
#curve25519-dalek = {version = "^0.16", features = ["nightly", "yolocrypto"]}
curve25519-dalek = {version = "^0.16"}
rand = "0.4"
digest = "0.7.2"
sha3 = "0.7.3"
generic-array = "0.9.0"
#block_cipher_trait = "0.5.0"
