[package]
name = "oblivious-transfer"
version = "0.1.0"
authors = ["Lennart Vogelsang <dev@vogelsangs.net>"]
#for now
publish = false

[lib]
crate-type = ["lib", "cdylib"]
name = "ot"
path = "src/lib.rs"

[[bin]]
name = "ot_test_bin"
path = "src/bin.rs"

[target.'cfg(all(target_arch="wasm32", target_os="unknown"))'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(not(all(target_arch="wasm32", target_os="unknown")))'.dependencies]
rust_sodium = "0.8.0"
tungstenite = "0.5.3"
rust_sodium-sys = "0.8.1"

[dependencies]
#TODO: nightly for faster field elements
#curve25519-dalek = {version = "^0.16", features = ["nightly", "yolocrypto"]}
curve25519-dalek = {version = "^0.16"}
rand = "0.4.0"
digest = "0.7.2"
sha3 = "0.7.3"
error-chain = "0.11.0"
generic-array = "0.9.0"
url = "1.5.1"

#block_cipher_trait = "0.5.0"
