[package]
name = "oblivious-transfer"
version = "0.1.0"
authors = ["Lennart Vogelsang <dev@vogelsangs.net>"]
#for now
publish = false

[lib]
#TODO make lib work with web crate
#crate-type = ["cdylib"]
crate-type = ["lib"]
name = "ot"
path = "src/lib.rs"

[[bin]]
name = "ot_benchmarking_server"
path = "src/benchmarking_server.rs"


#[target.'cfg(all(target_arch="wasm32", target_os="unknown"))'.dependencies]
#wasm-bindgen = "0.2"
#stdweb = {version="0.4.4"}

[features]
default = []
sodium = ["rust_sodium", "rust_sodium-sys"]

[target.wasm32-unknown-unknown.dependencies]
stdweb = {version="0.4.8", features=["futures-support", "experimental_features_which_may_break_on_minor_version_bumps"]}
rand = {version="0.5.0", features=["stdweb"]}
#futures-preview = "0.2.2"
futures-util = "0.2.1"
futures-core = "0.2.1"
futures-channel = "0.2.1"

[target.'cfg(not(all(target_arch="wasm32", target_os="unknown")))'.dependencies]
ring = "0.12.1"
rust_sodium = { version = "0.8.0", optional = true}
rust_sodium-sys = { version = "0.8.1", optional = true}
tungstenite = "0.5.3"
#tokio-tungstenite = "0.2.1"
#TODO: wait for next version to correctly import futures
#tokio = {git = "https://github.com/tokio-rs/tokio", features = ["futures2"]}

[dependencies]
# for wasm support, sadly it is quite behind the master branch
#rand = {git = "https://github.com/aochagavia/rand"}
rand = "0.5.0"
# interestingly u32_backend is the fastest, might talk to project owners about this?
tiny-keccak = "1.4.2"
error-chain = "0.11.0"
generic-array = "0.9.0"
url = "1.5.1"
structopt = "0.2"
arrayref = "0.3.4"
bit-vec = "0.5.0"
itertools = "0.7.8"
byte-tools = "0.2.0"
#futures-await = "0.2.0-alpha"
curve25519-dalek = {version = "0.18", features = ["avx2_backend", "std"], default-features = false}


#block_cipher_trait = "0.5.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "ot_rust"
harness = false