[package]
name = "beaver_triples_gen"
version = "0.1.0"

#[target.'cfg(all(target_arch="wasm32", target_os="unknown"))'.dependencies]
#wasm-bindgen = "0.2"
#stdweb = {version="0.4.4"}

[target.wasm32-unknown-unknown.dependencies]
stdweb = {version="0.4.5", features=["futures-support", "experimental_features_which_may_break_on_minor_version_bumps"]}
rand = {version="0.5.0", features=["stdweb"]}
futures-core = "0.2.1"
futures-util = "0.2.1"

[target.'cfg(not(all(target_arch="wasm32", target_os="unknown")))'.dependencies]
tungstenite = "0.5.3"
#tokio-tungstenite = "0.2.1"
#TODO: wait for next version to correctly import futures
#tokio = {git = "https://github.com/tokio-rs/tokio", features = ["futures2"]}

[dependencies]
oblivious-transfer = {path = "../../"}
rand = "0.5.0"
curve25519-dalek = {version = "^0.17", features = ["nightly", "yolocrypto", "avx2_backend"]}
tiny-keccak = "1.4.2"
error-chain = "0.11.0"
bit-vec = "0.5.0"
#futures-await = "0.2.0-alpha"