[package]
name = "client"
version = "0.1.0"

[dependencies]
oblivious-transfer = { path = "../.." }
futures = "0.2.1"
bit-vec = "0.5.0"
rand = {version="0.5.0", features=["stdweb"]}
stdweb = {version="0.4.5", features=["futures-support", "experimental_features_which_may_break_on_minor_version_bumps"]}
error-chain = "0.11.0"
tiny-keccak = "1.4.2"
