[package]
name = "extended_ot"
version = "0.1.0"
authors = ["Lennart Vogelsang <dev@vogelsangs.net>"]
publish = false
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[lib]

crate-type = ["lib"]
name = "ot"
path = "src/lib.rs"

[target.wasm32-unknown-unknown.dependencies]
stdweb = {version="0.4.10", features=["futures-support", "experimental_features_which_may_break_on_minor_version_bumps"]}

[target.'cfg(not(all(target_arch="wasm32", target_os="unknown")))'.dependencies]
romio = "0.3.0-alpha.1"

[dependencies]
oblivious-transfer = {path = "../../"}
futures-preview = "0.3.0-alpha.10"
rand = "0.6.1"
